--- a/APP(Android)/best_warrior/pubspec.yaml
+++ b/APP(Android)/best_warrior/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.1
+  firebase_database: ^9.1.7
 
 dev_dependencies:
   flutter_test:
