--- a/APP(Android)/best_warrior/pubspec.yaml
+++ b/APP(Android)/best_warrior/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.1
   firebase_database: ^9.1.7
+  font_awesome_flutter: ^9.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
