--- a/APP(Android)/best_warrior/pubspec.yaml
+++ b/APP(Android)/best_warrior/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   firebase_database: ^9.1.7
   font_awesome_flutter: ^9.0.0
   intl: ^0.17.0
-
+  table_calendar: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
