--- a/APP(Android)/best_warrior/pubspec.yaml
+++ b/APP(Android)/best_warrior/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   intl: ^0.17.0
   table_calendar: ^3.0.6
+  provider: ^6.0.4
+  cloud_firestore: ^3.5.1
+  uuid: ^3.0.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
